# CGame

./: .directory  .gitignore  CGame.kdev4  CMakeCache.txt  CMakeLists.txt  Economic Tree.odt  Game  Makefile  README.md  build.sh  cmake_install.cmake  compile_commands.json  main.cpp  test.txt
.kdev4/: CGame.kdev4
Core/: CMakeCache.txt  CMakeLists.txt  GameCoreTest  Makefile  cmake_install.cmake  edge.cpp  edge.h  fragment.h  game.h  gamebuilder.cpp  gamebuilder.h  graph.h  line.h  main.cpp  map.cpp  map.h  mapmaker.cpp  mapmaker.h  node.h  pathfinder.h  player.cpp  player.h  point.cpp  point.h  rectangle.cpp  rectangle.h  tile.cpp  tile.h  tileagent.h
Core/GameCore_autogen/: mocs_compilation.cpp
Core/GameCore_autogen/EWIEGA46WW/: moc_gamebuilder.cpp  moc_mapmaker.cpp
Core/PathFinding/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  path.h  pathfinder.cpp  pathfinder.h  tileagent.h
Core/PerlinNoise/: CMakeLists.txt  Makefile  PerlinNoise.cpp  cmake_install.cmake
Core/docs/: World Structure
Core/include/: GameCore
GUI/: CMakeCache.txt  CMakeLists.txt  GameGUI.pro  GameGUITest  Makefile  cmake_install.cmake  gameui.cpp  gameui.h  gameui.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapdisplay.cpp  mapdisplay.h
GUI/GameGUITest_autogen/: moc_predefs.h
GUI/GameGUITest_autogen/EWIEGA46WW/: moc_mainwindow.cpp
GUI/GameGUITest_autogen/include/: ui_mainwindow.h
GUI/GameGUI_autogen/: moc_predefs.h  mocs_compilation.cpp
GUI/GameGUI_autogen/EWIEGA46WW/: moc_gameui.cpp  moc_mainwindow.cpp
GUI/GameGUI_autogen/include/: ui_gameui.h  ui_mainwindow.h
GameCore/: CMakeLists.txt  agent.h  fragment.cpp  fragment.h  geometry.cpp  geometry.h  graph.h  line.cpp  map.h  pathfinder.cpp  utilities.h
GameGUI/: CMakeLists.txt  GameGUI.pro  main.cpp  mainwindow.cpp  mainwindow.h
GameGUI/GameCore/include/: agent.h  graph.h  map.h  node.h  path.h  pathfinder.h  tile.h
plans/: What is this Game
plans/Economics/: Economic Interface  Economic Structure  Economy Example
